# swigcsm

./: .gitignore  .travis.yml  CMakeLists.txt  DISCLAIMER.md  README.md  bytestreamisd.i  code.json  csm.i  csmapi.i  ellipsoid.i  environment.yml  geometricmodel.i  isd.i  model.i  plugin.i  rastergm.i  settableellipsoid.i  usgs.i  version.i  warning.i
.github/workflows/: ctests.yml
fixture/: CMakeLists.txt  model.cpp  model.h  plugin.cpp  plugin.h
python/: CMakeLists.txt  FindPythonAnaconda.cmake  __init__.py  setup.py.in
python/tests/: conftest.py  test_api.py  test_functional.py  test_model.py  test_plugin.py
recipe/: build.sh  meta.yaml
tests/: test_functional.py  test_plugin.py
